tests/Error/ErrorCollector/SniffRunnerSource/easy-coding-standard.php
<?php

declare(strict_types=1);

use SlevomatCodingStandard\Sniffs\Variables\UnusedVariableSniff;
use Symfony\Component\DependencyInjection\Loader\Configurator\ContainerConfigurator;

return static function (ContainerConfigurator $containerConfigurator): void {
    $services = $containerConfigurator->services();
    $services->set(UnusedVariableSniff::class);
};
